--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,14 +1,14 @@
 importFrom(drc, drm, LL.3)
 importFrom(utils, tail)
 import(stats)
-export(makeDrm, makeDrm2, makeSurv, NLSLL.3, GR, jackGroupSE,
+export(makeDrm, makeDrm2, makeSurv, NLSLL.3, GR, jackGroupSE, fitByGroup,
   GRPsiLin, GRPsiLin.fun, GRPsiPol, GRPsiPol.fun, GRPsiPol2, GRPsiPol2.fun,
   GRT.Exb, GRT.Exb.fun, GRT.M, GRT.M.fun, GRT.RFb, GRT.RFb.fun,
   PmaxPsi1, PmaxPsi1.fun, HTE1, HTE1.fun, HTnorm, HTnorm.fun, HTLL, HTLL.fun,
   HTL, HTL.fun, HTG, HTG.fun, HTEx, HTEx.fun, HTW1, HTW1.fun, HTW2, HTW2.fun,
-  HTTnorm, HTTnorm.fun,
+  HTTnorm, HTTnorm.fun, HTTLL, HTTLL.fun,
   HTE2, HTE2.fun, HTE3, HTE3.fun, TTEM, TTEM.fun, TTERF, TTERF.fun,
-  TTERFc, TTERFc.fun,
+  TTERFc, TTERFc.fun, TTERFgr, TTERFga,
   HTTEM, HTTEM.fun, HTTEMgr, HTTEMga,
   PmaxT1, PmaxT1.fun, PmaxTP1.fun, GR50TPM.fun)
 
