--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: drcSeedGerm
+Date: 2018-11-20
 Type: Package
 Title: Statistical approaches for data analyses in seed germination assays
-Version: 0.1.1
-Depends: R (>= 2.10.0)
-Author: Andrea Onofri
+Version: 0.1.2
+Depends: R (>= 2.10.0), drc
+Imports: drc
+Author: Andrea Onofri <andrea.onofri@unipg.it>
 Maintainer: Andrea Onofri <andrea.onofri@unipg.it>
 Description: This package contains several service functions to be used in support to the package drc, to analyse datasets obtained from seed germination assays 
-License: GPL (>= 2)
+License: GPL (>= 2) | file LICENCE
 Encoding: UTF-8
 LazyData: true
-Imports: drc
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
