--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,9 @@
 importFrom(drc, drm, LL.3)
 importFrom(utils, tail)
 import(stats)
-export(makeDrm, makeDrm2, makeSurv, NLSLL.3, GR, jackGroupSE, fitByGroup,
-  GRPsiLin, GRPsiLin.fun, GRPsiPol, GRPsiPol.fun, GRPsiPol2, GRPsiPol2.fun, 
+export(makeDrm, makeDrm2, makeNlin, makeSurv, NLSLL.3, GR, GTime,
+       jackGroupSE, fitByGroup, predictSG,
+  GRPsiLin, GRPsiLin.fun, GRPsiPol, GRPsiPol.fun, GRPsiPol2, GRPsiPol2.fun,
   GRT.Ex, GRT.Ex.fun, GRT.YL, GRT.YL.fun, GRT.BS, GRT.BS.fun,
   GRT.Exb, GRT.Exb.fun, GRT.GH, GRT.GH.fun, GRT.M, GRT.M.fun, GRT.RFb, GRT.RFb.fun,
   PmaxPsi1, PmaxPsi1.fun, HTE1, HTE1.fun, HTnorm, HTnorm.fun, HTLL, HTLL.fun,
