--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,13 @@ Package: drcSeedGerm
 Date: 2018-11-20
 Type: Package
 Title: Statistical approaches for data analyses in seed germination assays
-Version: 0.1.2
+Version: 0.95
 Depends: R (>= 2.10.0), drc
 Imports: drc
 Author: Andrea Onofri <andrea.onofri@unipg.it>
 Maintainer: Andrea Onofri <andrea.onofri@unipg.it>
 Description: This package contains several service functions to be used in support to the package drc, to analyse datasets obtained from seed germination assays 
+URL: https://www.statforbiology.com
 License: GPL (>= 2) | file LICENCE
 Encoding: UTF-8
 LazyData: true
