--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(makeDrm, makeDrm2, makeNlin, makeSurv, NLSLL.3, GR, GTime,
   GRPsiLin, GRPsiLin.fun, GRPsiPol, GRPsiPol.fun, GRPsiPol2, GRPsiPol2.fun,
   GRT.Ex, GRT.Ex.fun, GRT.YL, GRT.YL.fun, GRT.BS, GRT.BS.fun,
   GRT.Exb, GRT.Exb.fun, GRT.GH, GRT.GH.fun, GRT.M, GRT.M.fun, GRT.RFb, GRT.RFb.fun,
-  PmaxPsi1, PmaxPsi1.fun, HTE1, HTE1.fun, HTnorm, HTnorm.fun, HTLL, HTLL.fun,
+  PmaxPsi1, PmaxPsi1.fun, PmaxPsi1na, PmaxPsi1na.fun,
+  HTE1, HTE1.fun, HTE1na, HTE1na.fun,
+  HTnorm, HTnorm.fun, HTLL, HTLL.fun,
   HTL, HTL.fun, HTG, HTG.fun, HTEx, HTEx.fun, HTW1, HTW1.fun, HTW2, HTW2.fun,
   HTTnorm, HTTnorm.fun, HTTLL, HTTLL.fun,
   HTE2, HTE2.fun, HTE3, HTE3.fun, TTEM, TTEM.fun, TTERF, TTERF.fun,
