--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,7 @@
 importFrom(drc, drm, LL.3)
 importFrom(utils, tail)
 import(stats)
-export(makeDrm, makeDrm2, makeNlin, makeSurv, NLSLL.3, GR, GTime,
+export(makeDrm, makeDrm2, makeNlin, makeSurv, NLSLL.3, GRate, GTime,
        jackGroupSE, drmSG, predictSG, quantileSG,
   estfun.drc, bread.drc, predict.drc,
   GRPsiLin, GRPsiLin.fun, GRPsiPol, GRPsiPol.fun, GRPsiPol2, GRPsiPol2.fun,
