Added derivatives for Gr functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,8 @@ export(makeDrm, makeDrm2, makeNlin, makeSurv, NLSLL.3, GRate, GTime,
   estfun.drc, bread.drc, predict.drc,
   GRPsiLin, GRPsiLin.fun, GRPsiPol, GRPsiPol.fun, GRPsiPol2, GRPsiPol2.fun,
   GRT.Ex, GRT.Ex.fun, GRT.YL, GRT.YL.fun, GRT.BS, GRT.BS.fun,
-  GRT.Exb, GRT.Exb.fun, GRT.GH, GRT.GH.fun, GRT.M, GRT.M.fun, GRT.RFb, GRT.RFb.fun,
+  GRT.Exb, GRT.Exb.fun, GRT.GH, GRT.GH.fun, GRT.M, GRT.M.fun,
+  GRT.RFb, GRT.RFb.fun, GRT.RFb, GRT.RFb.fun,
   PmaxPsi1, PmaxPsi1.fun, PmaxPsi1na, PmaxPsi1na.fun,
   HTE1, HTE1.fun, HTE1na, HTE1na.fun,
   HTnorm, HTnorm.fun, HTLL, HTLL.fun,
