Edited broken-stick model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(makeDrm, makeDrm2, makeNlin, makeSurv, NLSLL.3, GRate, GTime,
        jackGroupSE, drmSG, predictSG, quantileSG, SGindices,
        ED2.drc, estfun.drc, bread.drc, predict.drc, drm,
   GRPsiLin, GRPsiLin.fun, GRPsiPol, GRPsiPol.fun, GRPsiPol2, GRPsiPol2.fun,
-  GRT.Ex, GRT.Ex.fun, GRT.YL, GRT.YL.fun, GRT.BS, GRT.BS.fun,
+  GRT.Ex, GRT.Ex.fun, GRT.YL, GRT.YL.fun, GRT.BS, GRT.BS.fun, GRT.BS2, GRT.BS2.fun,
   GRT.Exb, GRT.Exb.fun, GRT.GH, GRT.GH.fun, GRT.M, GRT.M.fun,
   GRT.RF, GRT.RF.fun, GRT.RFb, GRT.RFb.fun, GRT.GH2, GRT.GH2.fun,
   PmaxPsi1, PmaxPsi1.fun, PmaxPsi1na, PmaxPsi1na.fun,
