--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Date: 2019-06-21
 Type: Package
 Title: Statistical approaches for data analyses in seed germination assays
 Version: 0.98
-Depends: R (>= 2.10.0), drc
+Depends: R (>= 2.10.0), drc, plyr, tidyr
 Author: Andrea Onofri <andrea.onofri@unipg.it>
 Maintainer: Andrea Onofri <andrea.onofri@unipg.it>
 Description: This package contains several service functions to be used in support to the package drc, to analyse datasets obtained from seed germination assays 
