--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: drcSeedGerm
-Date: 2019-06-21
+Date: 2021-04-16
 Type: Package
 Title: Statistical approaches for data analyses in seed germination assays
-Version: 0.98
-Depends: R (>= 2.10.0), drc, plyr, tidyr
+Version: 0.991
+Depends: R (>= 2.10.0), drc, plyr, tidyr, sandwich
 Author: Andrea Onofri <andrea.onofri@unipg.it>
 Maintainer: Andrea Onofri <andrea.onofri@unipg.it>
 Description: This package contains several service functions to be used in support to the package drc, to analyse datasets obtained from seed germination assays 
