Updated HTT models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,13 +10,14 @@ export(makeDrm, makeDrm2, makeDrm.new, makeNlin, makeSurv2,
   GRT.Ex, GRT.Ex.fun, GRT.YL, GRT.YL.fun, GRT.BS, GRT.BS.fun, GRT.BS2, GRT.BS2.fun,
   GRT.Exb, GRT.Exb.fun, GRT.GH, GRT.GH.fun, GRT.M, GRT.M.fun,
   GRT.RF, GRT.RF.fun, GRT.RFb, GRT.RFb.fun, GRT.GH2, GRT.GH2.fun,
-  GRTPsi.M, GRTpsi.M.fun,
+  GRTPsi.M, GRTPsi.M.fun,
   PmaxPsi1, PmaxPsi1.fun, PmaxPsi1na, PmaxPsi1na.fun,
   HTE1, HTE1.fun, HTE1na, HTE1na.fun,
   HTnorm, HTnorm.fun, HTLL, HTLL.fun,
   HTL, HTL.fun, HTG, HTG.fun, HTEx, HTEx.fun, HTW1, HTW1.fun, HTW2, HTW2.fun,
-  HTTnorm, HTTnorm.fun, HTTnorm1, HTTnorm1.fun, HTTnorm2, HTTnorm2.fun,
-  HTTLL, HTTLL.fun,
+  # Hydro-Thermal-Time models
+  HTTnorm.M, HTTnorm.M.fun, HTTnorm.BS, HTTnorm.BS.fun,
+  HTTLL.M, HTTLL.M.fun, HTTLL.BS, HTTLL.BS.fun,
   HTE2, HTE2.fun, HTE3, HTE3.fun, TTEM, TTEM.fun, TTERF, TTERF.fun,
   TTERFc, TTERFc.fun, TTERFgr, TTERFga,
   HTTEM, HTTEM.fun, HTTEMgr, HTTEMga,
