--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(makeDrm, makeDrm2, makeDrm.new, makeNlin, makeSurv2,
   GRT.Ex, GRT.Ex.fun, GRT.YL, GRT.YL.fun, GRT.BS, GRT.BS.fun, GRT.BS2, GRT.BS2.fun,
   GRT.Exb, GRT.Exb.fun, GRT.GH, GRT.GH.fun, GRT.M, GRT.M.fun,
   GRT.RF, GRT.RF.fun, GRT.RFb, GRT.RFb.fun, GRT.GH2, GRT.GH2.fun,
-  GRTPsi.M, GRTPsi.M.fun,
+  GRTPsi.M, GRTPsi.M.fun, GRTPsi.BS, GRTPsi.BS.fun,
   PmaxPsi1, PmaxPsi1.fun, PmaxPsi1na, PmaxPsi1na.fun,
   HTE1, HTE1.fun, HTE1na, HTE1na.fun,
   HTnorm, HTnorm.fun, HTLL, HTLL.fun,
