--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: drcSeedGerm
-Date: 2021-04-16
+Date: 2022-12-14
 Type: Package
-Title: Statistical approaches for data analyses in seed germination assays
-Version: 0.9.93
-Depends: R (>= 3.5.0), drc, plyr, tidyr, sandwich
+Title: Utilities for data analyses in seed germination/emergence assays
+Version: 1.0.01
+Depends: R (>= 3.5.0), drc, drcte
+Imports: plyr, dplyr, tidyr, mvtnorm, survival
 Author: Andrea Onofri <andrea.onofri@unipg.it>
 Maintainer: Andrea Onofri <andrea.onofri@unipg.it>
-Description: This package contains several service functions to be used in support to the package drc, to analyse datasets obtained from seed germination assays 
+Description: This package contains several service functions to be used with the packages drc and drcte, to analyse datasets obtained from seed germination/emergence assays. 
 URL: https://www.statforbiology.com
-License: GPL (>= 2) | file LICENCE
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
