--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: drcSeedGerm
-Date: 2022-12-14
+Date: 2023-04-20
 Type: Package
-Title: Utilities for data analyses in seed germination/emergence assays
-Version: 1.0.01
+Title: Utilities for Data Analyses in Seed Germination/Emergence Assays
+Version: 1.1.0
 Depends: R (>= 3.5.0), drc, drcte
 Imports: plyr, dplyr, mvtnorm, survival
 Author: Andrea Onofri <andrea.onofri@unipg.it>
 Maintainer: Andrea Onofri <andrea.onofri@unipg.it>
-Description: This package contains several service functions to be used with the packages drc and drcte, to analyse datasets obtained from seed germination/emergence assays. 
+Description: Utility functions to be used to analyse datasets obtained from seed germination/emergence assays. Fits several types of seed germination/emergence models, including those reported in Onofri et al. (2018) "Hydrothermal-time-to-event models for seed germination", European Journal of Agronomy, 101, 129-139 <doi:10.1016/j.eja.2018.08.011>. Contains several datasets for practicing. 
 URL: https://www.statforbiology.com
 License: GPL (>= 2)
 Encoding: UTF-8
